[package]
name = "photon"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Photon is a high performance wallet backend."

[dependencies]
async-stream = "*"
bitcoin = "*"
bitcoin_hashes = "*"
bytes = "*"
clap = "*"
config = "*"
crossbeam = "*"
dirs = "*"
futures-preview = "=0.3.0-alpha.19"
hex = "*"
http = "*"
lazy_static = "*"
rocksdb = "*"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = "0.2.0-alpha.6"
tonic = "0.1.0-alpha.3"
tower = "=0.3.0-alpha.2"
prost = "*"

[build-dependencies]
tonic-build = "0.1.0-alpha.3"
