[package]
name = "photon"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Photon is a high performance wallet backend."

[dependencies]
bitcoin = "0.21.0"
bitcoin-zmq = "0.2.0-alpha.0"
bitcoin_hashes = "0.7.1"
bus_queue = { git = "https://github.com/hlb8122/bus-queue" }
bytes = "0.4.12"
clap = "2.33.0"
config = "0.9.3"
crossbeam = "0.7.3"
dirs = "2.0.2"
env_logger = "0.7.1"
futures-preview = "0.3.0-alpha.19"
hex = "0.4.0"
http = "0.1.19"
lazy_static = "1.4.0"
log = "0.4.8"
rocksdb = "0.12.4"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
tokio = "0.2.0-alpha.6"
tonic = { version = "0.1.0-alpha.5", features = ["rustls"] }
tower = "0.3.0-alpha.2"
prost = "0.5.0"

[build-dependencies]
tonic-build = "0.1.0-alpha.5"
