[package]
name = "photon"
version = "0.1.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Photon is a high performance wallet backend."

[dependencies]
bitcoin = "0.21.0"
bitcoin-zmq = "0.2.0-alpha.1"
bitcoin_hashes = "0.7.2"
bus_queue = { git = "https://github.com/hlb8122/bus-queue" }
bytes = "0.4"
clap = "2.33.0"
config = "0.10.1"
crossbeam = "0.7.3"
dirs = "2.0.2"
env_logger = "0.7.1"
futures = "0.3.1"
hex = "0.4.0"
http = "0.2.0"
lazy_static = "1.4.0"
log = "0.4.8"
rocksdb = "0.13.0"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
tokio = { version = "0.2.4", features = ["fs", "macros"] }
tonic = { git = "https://github.com/hyperium/tonic", features = ["tls"] }
prost = "0.5.0"

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic" }
